Closed
Bug 153092
Opened 23 years ago
Closed 17 years ago
text-decoration:blink still blinks in print preview
Categories
(Core :: Print Preview, defect, P4)
Core
Print Preview
Tracking
()
RESOLVED
FIXED
mozilla1.9.1a1
People
(Reporter: greimann, Assigned: MatsPalmgren_bugz)
References
()
Details
Attachments
(3 files)
600 bytes,
patch
|
kinmoz
:
review+
kinmoz
:
superreview+
|
Details | Diff | Splinter Review |
314 bytes,
text/html
|
Details | |
2.13 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; WinNT4.0; de-AT; rv:1.0.0) Gecko/20020530
BuildID: 2002053012
if using <blink>Text</blink> the Text still blinks in preview
never seen blinking printouts, might be new technology :-)
Reproducible: Always
Steps to Reproduce:
1. got to http://www.verwaltung.uni-karlsruhe.de/abt/h1/a12/a12s/info19.htm
2. open print preview
Actual Results: Text blinks in print preview
Expected Results: Text is *not* blinking
Confirmed 2002062008 Win2k
Severity: minor → trivial
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: when using <blink> text still blinks in preview → when using <blink> text still blinks in print preview
![]() |
||
Comment 2•23 years ago
|
||
![]() |
||
Comment 3•23 years ago
|
||
The real way to do this is to disable text-decoration:blink in non-screen media.
Well, er, it doesn't fix the real problem, which is that we shouldn't support
text-decoration: blink in print previouw at all...
Updated•23 years ago
|
Keywords: mozilla1.1
Comment 5•23 years ago
|
||
Comment on attachment 88605 [details] [diff] [review]
This would fix it
thanks for the patch r=rods
Attachment #88605 -
Flags: superreview+
Attachment #88605 -
Flags: review+
Comment 7•23 years ago
|
||
Should be marked fixed.
See comment 4. If this bug is marked FIXED, a new bug should be filed, with
<blink> replaced by 'text-decoration: blink' in the summary.
Comment 9•23 years ago
|
||
WFM in Mozilla 1.1 on Windows 98. (In other words, the text appears
in print preview and does not blink.)
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.1) Gecko/20020826
The blinking text even prints out now, which is the original reason
I came across this bug. I was going to file a bug on blinking text
not printing.
Updated•23 years ago
|
Priority: -- → P4
Target Milestone: --- → Future
Updated•23 years ago
|
Status: NEW → ASSIGNED
Updated•23 years ago
|
Updated•22 years ago
|
Summary: when using <blink> text still blinks in print preview → text-decoration:blink still blinks in print preview
Comment 10•22 years ago
|
||
WFM Moz 1.6final
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → WORKSFORME
Comment 11•20 years ago
|
||
This is not WORKSFORME in current trunk.
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Comment 12•20 years ago
|
||
Comment 13•20 years ago
|
||
*** Bug 298325 has been marked as a duplicate of this bug. ***
Comment 14•20 years ago
|
||
It happens also in Mozilla 1.7.8.
Assignee | ||
Updated•17 years ago
|
Assignee: rods → mats.palmgren
Status: REOPENED → NEW
OS: Windows NT → All
Hardware: PC → All
Target Milestone: Future → ---
Assignee | ||
Comment 15•17 years ago
|
||
Attachment #321107 -
Flags: superreview?(roc)
Attachment #321107 -
Flags: review?(roc)
Comment on attachment 321107 [details] [diff] [review]
Like so?
That'll do it.
Attachment #321107 -
Flags: superreview?(roc)
Attachment #321107 -
Flags: superreview+
Attachment #321107 -
Flags: review?(roc)
Attachment #321107 -
Flags: review+
Assignee | ||
Comment 17•17 years ago
|
||
Status: NEW → RESOLVED
Closed: 22 years ago → 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1a1
You need to log in
before you can comment on or make changes to this bug.
Description
•