Always paint text-decoration:blink in non-dynamic (print/preview) contexts. b=153092 r+sr=roc